// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertPropsToStyle() quando receber apenas um argumento com breakingpoints renders only one breakpoint resolution 1`] = `
Array [
  Array [
    "@media screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
]
`;

exports[`convertPropsToStyle() quando receber apenas um argumento com breakingpoints renders two or more breakpoint resolutions 1`] = `
Array [
  Array [
    "@media screen and (min-width:",
    "0",
    "px){",
    "text-align: center;",
    "}",
  ],
  Array [
    "@media screen and (min-width:",
    "768",
    "px){",
    "text-align: right;",
    "}",
  ],
]
`;
